package entity;

import java.util.UUID;

public class LanguageUserConnector {
    private UUID userId;
    private UUID languageId;
    private String level;
}
